gtk+3.0 (3.22.26-1) UNRELEASED; urgency=medium

  [ Simon McVittie ]
  * Move examples, udebs from Priority: extra to optional

  [ Michael Biebl ]
  * New upstream release
  * Rebase patches
  * Update symbols file for libgtk-3-0
  * Bump Standards-Version to 4.1.1

 -- Simon McVittie <smcv@debian.org>  Sun, 29 Oct 2017 19:32:09 +0000

gtk+3.0 (3.22.25-1) unstable; urgency=medium

  * Team upload
  * New upstream release
    - Fix tiling behaviour with Mutter/Shell 3.26 (Closes: #879566)
    - Update symbols file
    - d/p/0001-Adwaita-Fix-typo-.backgrounf-.background.patch,
      d/p/0002-theme-Fix-Adwaita-headerbars.patch,
      d/p/0003-display-x11-Unset-tiled-state-if-_GTK_EDGE_CONSTRAIN.patch:
      Drop patches, applied upstream
    - d/p/gdk-wayland-protocol-server-decoration.patch:
      Add server-decoration.xml from upstream git. It is missing from the
      tarball release.

 -- Simon McVittie <smcv@debian.org>  Sun, 29 Oct 2017 17:21:51 +0000

gtk+3.0 (3.22.24-3) unstable; urgency=medium

  [ Jeremy Bicha ]
  * Drop 0004_fix-gtkentry-wayland-regression.patch:
    - Reverted upstream since it caused a totem regression. Epiphany
      issue was fixed in mutter instead.

  [ Michael Biebl ]
  * Force update of GResource files so the changes to the CSS files from
    0002-theme-Fix-Adwaita-headerbars.patch are actually applied.

 -- Michael Biebl <biebl@debian.org>  Sun, 22 Oct 2017 13:22:16 +0200

gtk+3.0 (3.22.24-2) unstable; urgency=medium

  [ Jeremy Bicha ]
  * Add 0004_fix-gtkentry-wayland-regression.patch:
    - Cherry-pick fix for lag with Epiphany's address bar (Closes: #875826)

  [ Michael Biebl ]
  * Switch from XC-Package-Type to Package-Type which is an official field
    name since dpkg-dev 1.15.7.

 -- Jeremy Bicha <jbicha@debian.org>  Mon, 16 Oct 2017 08:26:07 -0400

gtk+3.0 (3.22.24-1) unstable; urgency=low

  * New upstream release (LP: #1712011, #1719047)
  * Cherry-pick fixes committed after the 3.22.24 release: