@@ -69,8 +69,6 @@ Provides: gtk3-binver-3.0.0
 Recommends: libgtk-3-bin
 Suggests: librsvg2-common,
           gvfs
-Breaks: gnome-themes-standard (<< 3.6),
-        gtk3-engines-oxygen (<< 1.4.1-3)
 Pre-Depends: ${misc:Pre-Depends}
 Description: GTK+ graphical user interface library
  GTK+ is a multi-platform toolkit for creating graphical user
@@ -104,8 +102,6 @@ Architecture: all
 Multi-Arch: foreign
 Depends: ${misc:Depends}
 Recommends: libgtk-3-0
-Breaks: libgtk-3-0 (<< 3.5.4)
-Replaces: libgtk-3-0 (<< 3.5.4)
 Description: common files for the GTK+ graphical user interface library
  GTK+ is a multi-platform toolkit for creating graphical user
  interfaces. Offering a complete set of widgets, GTK+ is suitable
@@ -196,8 +192,6 @@ Architecture: any
 Depends: ${shlibs:Depends},
          ${misc:Depends},
          libgtk-3-0 (= ${binary:Version})
-Breaks: libgtk-3-common (<< 3.5.4)
-Replaces: libgtk-3-common (<< 3.5.4)
 Description: example files for GTK+ 3
  GTK+ is a multi-platform toolkit for creating graphical user
  interfaces. Offering a complete set of widgets, GTK+ is suitable
